--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,22 +49,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "MO,8:00,3,2\n",
-      "MO,9:00,3,2\n",
-      "TU,9:30,2,1\n",
-      "MO,8:00,4,2\n",
-      "TU,10:00,2,1\n",
-      "FR,10:00,2,1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def process_slots(data: str, columns: list, event_type: str):\n",
     "    \"\"\"\n",
@@ -130,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,24 +130,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CMSA U13T3 DIV  01 \n",
-      "CMSA U13T3 DIV 02 \n",
-      "CUSA O18 DIV 01 \n",
-      "CMSA U17T1 DIV 01 \n",
-      "CMSA U13T3 DIV 01 PRC 01 \n",
-      "CMSA U13T3 DIV 02 OPN 02 \n",
-      "CUSA O18 DIV 01 PRC 01 \n",
-      "CMSA U17T1 PRC 01 \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def process_games_practices(data, columns, event_type):\n",
     "    \"\"\"\n",
@@ -252,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,7 +346,7 @@
     "        events['Unwanted'] = np.empty((len(events), 0)).tolist()\n",
     "        events['Incompatible'] = np.empty((len(events), 0)).tolist()\n",
     "        events['Pair_with'] = np.empty((len(events), 0)).tolist()\n",
-    "        events['Part_assign'] = np.empty((len(events), 0)).tolist()    \n",
+    "        # events['Part_assign'] = np.empty((len(events), 0)).tolist()    \n",
     "        \n",
     "        # Add all unwanted slots to the list in 'Unwanted' column for each event mentioned\n",
     "        for unwanted in split_data[7].split('\\n'):\n",
@@ -434,37 +406,71 @@
     "        \n",
     "        self.events = events\n",
     "        \n",
-    "        \n",
-    "        def get_events(self):\n",
-    "            \"\"\"\n",
-    "            Returns the DataFrame containing the processed game and practice data.\n",
-    "            Returns:\n",
-    "                pd.DataFrame: A DataFrame containing the processed game and practice data.\n",
-    "            \"\"\"\n",
-    "            return self.events\n",
-    "        \n",
-    "        def get_game_slots(self):\n",
-    "            \"\"\"\n",
-    "            Returns the DataFrame containing the processed game slots.\n",
-    "            Returns:\n",
-    "                pd.DataFrame: A DataFrame containing the processed game slots.\n",
-    "            \"\"\"\n",
-    "            return self.game_slots\n",
-    "        \n",
-    "        def get_practice_slots(self):\n",
-    "            \"\"\"\n",
-    "            Returns the DataFrame containing the processed practice slots.\n",
-    "            Returns:\n",
-    "                pd.DataFrame: A DataFrame containing the processed practice slots.\n",
-    "            \"\"\"\n",
-    "            return self.practice_slots"
+    "    def get_events(self):\n",
+    "        \"\"\"\n",
+    "        Returns the DataFrame containing the processed game and practice data.\n",
+    "        Returns:\n",
+    "            pd.DataFrame: A DataFrame containing the processed game and practice data.\n",
+    "        \"\"\"\n",
+    "        return self.events\n",
+    "    \n",
+    "    def get_game_slots(self):\n",
+    "        \"\"\"\n",
+    "        Returns the DataFrame containing the processed game slots.\n",
+    "        Returns:\n",
+    "            pd.DataFrame: A DataFrame containing the processed game slots.\n",
+    "        \"\"\"\n",
+    "        return self.game_slots\n",
+    "    \n",
+    "    def get_practice_slots(self):\n",
+    "        \"\"\"\n",
+    "        Returns the DataFrame containing the processed practice slots.\n",
+    "        Returns:\n",
+    "            pd.DataFrame: A DataFrame containing the processed practice slots.\n",
+    "        \"\"\"\n",
+    "        return self.practice_slots"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File chosen = ShortExample.txt\n",
+      "Integer inputs = [1, 0, 1, 0, 10, 10, 10, 10]\n",
+      "['', ' \\nShortExample \\n\\n', ' \\nMO, 8:00, 3, 2 \\nMO, 9:00,3,2 \\nTU, 9:30, 2, 1 \\n\\n', ' \\nMO, 8:00, 4, 2 \\nTU, 10:00,2,1 \\nFR, 10:00, 2, 1 \\n\\n', ' \\nCMSA U13T3 DIV  01 \\nCMSA U13T3 DIV 02 \\nCUSA O18 DIV 01 \\nCMSA U17T1 DIV 01 \\n\\n', ' \\nCMSA U13T3 DIV 01 PRC 01 \\nCMSA U13T3 DIV 02 OPN 02 \\nCUSA O18 DIV 01 PRC 01 \\nCMSA U17T1 PRC 01 \\n\\n', ' \\nCMSA U13T3 DIV 01 PRC 01, CMSA U13T3 DIV 02 OPN 02 \\nCMSA U17T1 DIV 01, CMSA U13T3 DIV 01 \\nCMSA  U17T1 DIV 01, CMSA U13T3 DIV 02 \\nCMSA U17T1 PRC 01, CMSA U13T3 DIV 02 \\nCMSA U13T3 DIV 01, CMSA U17T1 PRC 01 \\n\\n', ' \\nCMSA U13T3 DIV 01, MO, 8:00 \\n\\n', ' \\nTU, 9:30, CMSA U13T3 DIV 01, 10 \\nMO, 8:00, CMSA U13T3 DIV   01 PRC 01, 3 \\nTU, 9:30, CMSA U13T3 DIV 02, 10 \\nTU, 10:00, CMSA U13T3 DIV 01 OPN 02, 5 \\nMO, 8:00, CMSA U13T3 DIV 02 OPN 02, 1 \\nMO, 10:00, CMSA U13T3 DIV 02 OPN 02, 7 \\n\\n', ' \\nCUSA O18 DIV 01, CMSA U17T1 DIV 01 \\n\\n', ' \\nCUSA O18 DIV 01, MO, 8:00 \\nCUSA O18 DIV 01 PRC 01, FR, 10:00']\n",
+      "MO,8:00,3,2\n",
+      "MO,9:00,3,2\n",
+      "TU,9:30,2,1\n",
+      "MO,8:00,4,2\n",
+      "TU,10:00,2,1\n",
+      "FR,10:00,2,1\n",
+      "CMSA U13T3 DIV  01 \n",
+      "CMSA U13T3 DIV 02 \n",
+      "CUSA O18 DIV 01 \n",
+      "CMSA U17T1 DIV 01 \n",
+      "CMSA U13T3 DIV 01 PRC 01 \n",
+      "CMSA U13T3 DIV 02 OPN 02 \n",
+      "CUSA O18 DIV 01 PRC 01 \n",
+      "CMSA U17T1 PRC 01 \n",
+      "CMSAU13T3DIV01,MO,8:00\n",
+      "TU,9:30,CMSAU13T3DIV01,10\n",
+      "MO,8:00,CMSAU13T3DIV01PRC01,3\n",
+      "TU,9:30,CMSAU13T3DIV02,10\n",
+      "TU,10:00,CMSAU13T3DIV01OPN02,5\n",
+      "Entry error: CMSAU13T3DIV01OPN02 is not in table\n",
+      "MO,8:00,CMSAU13T3DIV02OPN02,1\n",
+      "MO,10:00,CMSAU13T3DIV02OPN02,7\n",
+      "CUSAO18DIV01,CMSAU17T1DIV01\n",
+      "['CMSAU13T3DIV01', 'CMSAU13T3DIV02', 'CUSAO18DIV01', 'CMSAU17T1DIV01', 'CMSAU13T3DIV01PRC01', 'CMSAU13T3DIV02OPN02', 'CUSAO18DIV01PRC01', 'CMSAU17T1PRC01']\n",
+      "[('CUSAO18DIV01', 'MO8:00'), ('CUSAO18DIV01PRC01', 'FR10:00')]\n"
+     ]
+    }
+   ],
    "source": [
     "env = Env()\n",
     "events = env.get_events()\n",
@@ -481,7 +487,213 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>League</th>\n",
+       "      <th>Tier</th>\n",
+       "      <th>Div</th>\n",
+       "      <th>Practice_Type</th>\n",
+       "      <th>Num</th>\n",
+       "      <th>Type</th>\n",
+       "      <th>Unwanted</th>\n",
+       "      <th>Incompatible</th>\n",
+       "      <th>Pair_with</th>\n",
+       "      <th>Pref</th>\n",
+       "      <th>Pref_value</th>\n",
+       "      <th>Part_assign</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>CMSAU13T3DIV01</th>\n",
+       "      <td>CMSA</td>\n",
+       "      <td>U13T3</td>\n",
+       "      <td>01</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>G</td>\n",
+       "      <td>[MO8:00]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>TU9:30</td>\n",
+       "      <td>10</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CMSAU13T3DIV02</th>\n",
+       "      <td>CMSA</td>\n",
+       "      <td>U13T3</td>\n",
+       "      <td>02</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>G</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>TU9:30</td>\n",
+       "      <td>10</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CUSAO18DIV01</th>\n",
+       "      <td>CUSA</td>\n",
+       "      <td>O18</td>\n",
+       "      <td>01</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>G</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[CMSAU17T1DIV01]</td>\n",
+       "      <td></td>\n",
+       "      <td>0</td>\n",
+       "      <td>MO8:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CMSAU17T1DIV01</th>\n",
+       "      <td>CMSA</td>\n",
+       "      <td>U17T1</td>\n",
+       "      <td>01</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>G</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[CUSAO18DIV01]</td>\n",
+       "      <td></td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CMSAU13T3DIV01PRC01</th>\n",
+       "      <td>CMSA</td>\n",
+       "      <td>U13T3</td>\n",
+       "      <td>01</td>\n",
+       "      <td>PRC</td>\n",
+       "      <td>01</td>\n",
+       "      <td>P</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>MO8:00</td>\n",
+       "      <td>3</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CMSAU13T3DIV02OPN02</th>\n",
+       "      <td>CMSA</td>\n",
+       "      <td>U13T3</td>\n",
+       "      <td>02</td>\n",
+       "      <td>OPN</td>\n",
+       "      <td>02</td>\n",
+       "      <td>P</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>MO10:00</td>\n",
+       "      <td>7</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CUSAO18DIV01PRC01</th>\n",
+       "      <td>CUSA</td>\n",
+       "      <td>O18</td>\n",
+       "      <td>01</td>\n",
+       "      <td>PRC</td>\n",
+       "      <td>01</td>\n",
+       "      <td>P</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td></td>\n",
+       "      <td>0</td>\n",
+       "      <td>FR10:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CMSAU17T1PRC01</th>\n",
+       "      <td>CMSA</td>\n",
+       "      <td>U17T1</td>\n",
+       "      <td></td>\n",
+       "      <td>PRC</td>\n",
+       "      <td>01</td>\n",
+       "      <td>P</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td></td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    League   Tier Div Practice_Type Num Type  Unwanted  \\\n",
+       "CMSAU13T3DIV01        CMSA  U13T3  01                      G  [MO8:00]   \n",
+       "CMSAU13T3DIV02        CMSA  U13T3  02                      G        []   \n",
+       "CUSAO18DIV01          CUSA    O18  01                      G        []   \n",
+       "CMSAU17T1DIV01        CMSA  U17T1  01                      G        []   \n",
+       "CMSAU13T3DIV01PRC01   CMSA  U13T3  01           PRC  01    P        []   \n",
+       "CMSAU13T3DIV02OPN02   CMSA  U13T3  02           OPN  02    P        []   \n",
+       "CUSAO18DIV01PRC01     CUSA    O18  01           PRC  01    P        []   \n",
+       "CMSAU17T1PRC01        CMSA  U17T1               PRC  01    P        []   \n",
+       "\n",
+       "                    Incompatible         Pair_with     Pref Pref_value  \\\n",
+       "CMSAU13T3DIV01                []                []   TU9:30         10   \n",
+       "CMSAU13T3DIV02                []                []   TU9:30         10   \n",
+       "CUSAO18DIV01                  []  [CMSAU17T1DIV01]                   0   \n",
+       "CMSAU17T1DIV01                []    [CUSAO18DIV01]                   0   \n",
+       "CMSAU13T3DIV01PRC01           []                []   MO8:00          3   \n",
+       "CMSAU13T3DIV02OPN02           []                []  MO10:00          7   \n",
+       "CUSAO18DIV01PRC01             []                []                   0   \n",
+       "CMSAU17T1PRC01                []                []                   0   \n",
+       "\n",
+       "                    Part_assign  \n",
+       "CMSAU13T3DIV01                   \n",
+       "CMSAU13T3DIV02                   \n",
+       "CUSAO18DIV01             MO8:00  \n",
+       "CMSAU17T1DIV01                   \n",
+       "CMSAU13T3DIV01PRC01              \n",
+       "CMSAU13T3DIV02OPN02              \n",
+       "CUSAO18DIV01PRC01       FR10:00  \n",
+       "CMSAU17T1PRC01                   "
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "events"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -490,21 +702,22 @@
     "    def __init__(self):\n",
     "        self.eval = None\n",
     "        self.event_list = events.index.tolist()\n",
-    "        self.assignments = pd.DataFrame(self.event_list, columns = ['Event', 'Slot'])\n",
-    "        self.assigned = []\n",
+    "        print(self.event_list)\n",
+    "        self.assignments = events['Part_assign']\n",
+    "        # self.assignments = pd.DataFrame(self.event_list, columns = ['Event'])\n",
     "        \n",
     "    def get_Starting(self):\n",
-    "        self.assignments = events['Part_assign'].tolist()\n",
     "        return self.assignments\n",
     "        \n",
     "    def set_Eval(self):\n",
     "        total_df = events.copy()\n",
-    "        total_df['Assigned'] = self.assignments['Slot']\n",
+    "        # total_df.reset_index(total_df, inplace = True, \n",
+    "        total_df['Assigned'] = self.assignments\n",
+    "        \n",
     "        df = pd.merge(total_df, game_slots, how = 'left', left_on = 'Assigned', right_index = True)\n",
     "        df = pd.merge(df, practice_slots, how = 'left', left_on = 'Assigned', right_index = True)    \n",
     "        \n",
-    "        \n",
-    "        self.eval = pd.sum(df['Eval'])\n",
+    "        # self.eval = pd.sum(df['Eval'])\n",
     "        \n",
     "    \n",
     "    def assign(self, slots):\n",
@@ -517,10 +730,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 86,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['CMSAU13T3DIV01', 'CMSAU13T3DIV02', 'CUSAO18DIV01', 'CMSAU17T1DIV01', 'CMSAU13T3DIV01PRC01', 'CMSAU13T3DIV02OPN02', 'CUSAO18DIV01PRC01', 'CMSAU17T1PRC01']\n",
+      "CMSAU13T3DIV01                \n",
+      "CMSAU13T3DIV02                \n",
+      "CUSAO18DIV01            MO8:00\n",
+      "CMSAU17T1DIV01                \n",
+      "CMSAU13T3DIV01PRC01           \n",
+      "CMSAU13T3DIV02OPN02           \n",
+      "CUSAO18DIV01PRC01      FR10:00\n",
+      "CMSAU17T1PRC01                \n",
+      "Name: Part_assign, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "sched = Schedule()\n",
+    "print(sched.get_Starting())\n",
+    "sched.set_Eval()"
+   ]
   }
  ],
  "metadata": {
