--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -441,7 +441,7 @@
      "output_type": "stream",
      "text": [
       "File chosen = ShortExample.txt\n",
-      "Integer inputs = [1, 0, 1, 0, 10, 10, 10, 10]\n",
+      "Integer inputs = [0, 0, 0, 0, 10, 10, 10, 10]\n",
       "['', ' \\nShortExample \\n\\n', ' \\nMO, 8:00, 3, 2 \\nMO, 9:00,3,2 \\nTU, 9:30, 2, 1 \\n\\n', ' \\nMO, 8:00, 4, 2 \\nTU, 10:00,2,1 \\nFR, 10:00, 2, 1 \\n\\n', ' \\nCMSA U13T3 DIV  01 \\nCMSA U13T3 DIV 02 \\nCUSA O18 DIV 01 \\nCMSA U17T1 DIV 01 \\n\\n', ' \\nCMSA U13T3 DIV 01 PRC 01 \\nCMSA U13T3 DIV 02 OPN 02 \\nCUSA O18 DIV 01 PRC 01 \\nCMSA U17T1 PRC 01 \\n\\n', ' \\nCMSA U13T3 DIV 01 PRC 01, CMSA U13T3 DIV 02 OPN 02 \\nCMSA U17T1 DIV 01, CMSA U13T3 DIV 01 \\nCMSA  U17T1 DIV 01, CMSA U13T3 DIV 02 \\nCMSA U17T1 PRC 01, CMSA U13T3 DIV 02 \\nCMSA U13T3 DIV 01, CMSA U17T1 PRC 01 \\n\\n', ' \\nCMSA U13T3 DIV 01, MO, 8:00 \\n\\n', ' \\nTU, 9:30, CMSA U13T3 DIV 01, 10 \\nMO, 8:00, CMSA U13T3 DIV   01 PRC 01, 3 \\nTU, 9:30, CMSA U13T3 DIV 02, 10 \\nTU, 10:00, CMSA U13T3 DIV 01 OPN 02, 5 \\nMO, 8:00, CMSA U13T3 DIV 02 OPN 02, 1 \\nMO, 10:00, CMSA U13T3 DIV 02 OPN 02, 7 \\n\\n', ' \\nCUSA O18 DIV 01, CMSA U17T1 DIV 01 \\n\\n', ' \\nCUSA O18 DIV 01, MO, 8:00 \\nCUSA O18 DIV 01 PRC 01, FR, 10:00']\n",
       "MO,8:00,3,2\n",
       "MO,9:00,3,2\n",
@@ -467,7 +467,8 @@
       "MO,10:00,CMSAU13T3DIV02OPN02,7\n",
       "CUSAO18DIV01,CMSAU17T1DIV01\n",
       "['CMSAU13T3DIV01', 'CMSAU13T3DIV02', 'CUSAO18DIV01', 'CMSAU17T1DIV01', 'CMSAU13T3DIV01PRC01', 'CMSAU13T3DIV02OPN02', 'CUSAO18DIV01PRC01', 'CMSAU17T1PRC01']\n",
-      "[('CUSAO18DIV01', 'MO8:00'), ('CUSAO18DIV01PRC01', 'FR10:00')]\n"
+      "[('CUSAO18DIV01', 'MO8:00'), ('CUSAO18DIV01PRC01', 'FR10:00')]\n",
+      "env.pen_notpaired = 10\n"
      ]
     }
    ],
@@ -475,7 +476,10 @@
     "env = Env()\n",
     "events = env.get_events()\n",
     "game_slots = env.get_game_slots()\n",
-    "practice_slots = env.get_practice_slots()"
+    "practice_slots = env.get_practice_slots()\n",
+    "print(f\"{env.pen_notpaired = }\")\n",
+    "print(env.w_pair)\n",
+    "env."
    ]
   },
   {
@@ -487,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -682,7 +686,7 @@
        "CMSAU17T1PRC01                   "
       ]
      },
-     "execution_count": 84,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -693,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -716,8 +720,12 @@
     "        \n",
     "        df = pd.merge(total_df, game_slots, how = 'left', left_on = 'Assigned', right_index = True)\n",
     "        df = pd.merge(df, practice_slots, how = 'left', left_on = 'Assigned', right_index = True)    \n",
+    "        print(df.columns)\n",
     "        \n",
+    "        print((df['Pair_with']))\n",
+    "        print(df['Assigned'])\n",
     "        # self.eval = pd.sum(df['Eval'])\n",
+    "    \n",
     "        \n",
     "    \n",
     "    def assign(self, slots):\n",
@@ -730,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -738,6 +746,21 @@
      "output_type": "stream",
      "text": [
       "['CMSAU13T3DIV01', 'CMSAU13T3DIV02', 'CUSAO18DIV01', 'CMSAU17T1DIV01', 'CMSAU13T3DIV01PRC01', 'CMSAU13T3DIV02OPN02', 'CUSAO18DIV01PRC01', 'CMSAU17T1PRC01']\n",
+      "Index(['League', 'Tier', 'Div', 'Practice_Type', 'Num', 'Type_x', 'Unwanted',\n",
+      "       'Incompatible', 'Pair_with', 'Pref', 'Pref_value', 'Part_assign',\n",
+      "       'Assigned', 'Day_x', 'Start_x', 'Max_x', 'Min_x', 'Invalid_Assign_x',\n",
+      "       'Type_y', 'Day_y', 'Start_y', 'Max_y', 'Min_y', 'Invalid_Assign_y',\n",
+      "       'Type'],\n",
+      "      dtype='object')\n",
+      "CMSAU13T3DIV01                       []\n",
+      "CMSAU13T3DIV02                       []\n",
+      "CUSAO18DIV01           [CMSAU17T1DIV01]\n",
+      "CMSAU17T1DIV01           [CUSAO18DIV01]\n",
+      "CMSAU13T3DIV01PRC01                  []\n",
+      "CMSAU13T3DIV02OPN02                  []\n",
+      "CUSAO18DIV01PRC01                    []\n",
+      "CMSAU17T1PRC01                       []\n",
+      "Name: Pair_with, dtype: object\n",
       "CMSAU13T3DIV01                \n",
       "CMSAU13T3DIV02                \n",
       "CUSAO18DIV01            MO8:00\n",
@@ -746,20 +769,22 @@
       "CMSAU13T3DIV02OPN02           \n",
       "CUSAO18DIV01PRC01      FR10:00\n",
       "CMSAU17T1PRC01                \n",
-      "Name: Part_assign, dtype: object\n"
+      "Name: Assigned, dtype: object\n"
      ]
     }
    ],
    "source": [
+    "\n",
+    "\n",
     "sched = Schedule()\n",
-    "print(sched.get_Starting())\n",
+    "# print(sched.())\n",
     "sched.set_Eval()"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -773,7 +798,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
