work on minfilled

--- a/main.ipynb
+++ b/main.ipynb
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -468,7 +468,11 @@
       "MO,10:00,CMSAU13T3DIV02OPN02,7\n",
       "CUSAO18DIV01,CMSAU17T1DIV01\n",
       "['CMSAU13T3DIV01', 'CMSAU13T3DIV02', 'CUSAO18DIV01', 'CMSAU17T1DIV01', 'CMSAU13T3DIV01PRC01', 'CMSAU13T3DIV02OPN02', 'CUSAO18DIV01PRC01', 'CMSAU17T1PRC01']\n",
-      "[('CUSAO18DIV01', 'MO8:00'), ('CUSAO18DIV01PRC01', 'FR10:00')]\n"
+      "[('CUSAO18DIV01', 'MO8:00'), ('CUSAO18DIV01PRC01', 'FR10:00')]\n",
+      "       Day Start Max Min Invalid_Assign Type\n",
+      "MO8:00  MO  8:00   3   2             []    G\n",
+      "MO9:00  MO  9:00   3   2             []    G\n",
+      "TU9:30  TU  9:30   2   1             []    G\n"
      ]
     }
    ],
@@ -476,7 +480,11 @@
     "env = Env()\n",
     "events = env.get_events()\n",
     "game_slots = env.get_game_slots()\n",
-    "practice_slots = env.get_practice_slots()"
+    "practice_slots = env.get_practice_slots()\n",
+    "\n",
+    "\n",
+    "\n",
+    "print(game_slots)\n"
    ]
   },
   {
@@ -492,17 +500,55 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'filterRows' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[68], line 97\u001b[0m\n\u001b[0;32m     95\u001b[0m sched \u001b[38;5;241m=\u001b[39m Schedule()\n\u001b[0;32m     96\u001b[0m \u001b[38;5;66;03m# print(sched.get_Starting())\u001b[39;00m\n\u001b[1;32m---> 97\u001b[0m \u001b[43msched\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43massign\u001b[49m\u001b[43m(\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mMO8:00\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mMO8:00\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mMO8:00\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mMO8:00\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mMO8:00\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mMO8:00\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mMO8:00\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mMO8:00\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     98\u001b[0m sched\u001b[38;5;241m.\u001b[39mset_Eval()\n\u001b[0;32m     99\u001b[0m \u001b[38;5;66;03m# CMSAU17T1DIV01\u001b[39;00m\n",
-      "Cell \u001b[1;32mIn[68], line 90\u001b[0m, in \u001b[0;36mSchedule.assign\u001b[1;34m(self, slots)\u001b[0m\n\u001b[0;32m     88\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39massignments[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mSlot\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m slots\n\u001b[0;32m     89\u001b[0m \u001b[38;5;66;03m# print(f\"{self.assignments['Slot'] = }\")\u001b[39;00m\n\u001b[1;32m---> 90\u001b[0m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mset_Eval\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     91\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39meval\n",
-      "Cell \u001b[1;32mIn[68], line 74\u001b[0m, in \u001b[0;36mSchedule.set_Eval\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     69\u001b[0m df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mmerge(df, practice_slots, how \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mleft\u001b[39m\u001b[38;5;124m'\u001b[39m, left_on \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mAssigned\u001b[39m\u001b[38;5;124m'\u001b[39m, right_index \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m)    \n\u001b[0;32m     72\u001b[0m filterRows \u001b[38;5;241m=\u001b[39m df[df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mAssigned\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m!=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n\u001b[1;32m---> 74\u001b[0m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdetermine_pair_penalty\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     76\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mdf[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mAssigned\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;250m \u001b[39m\u001b[38;5;132;01m= }\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
-      "Cell \u001b[1;32mIn[68], line 12\u001b[0m, in \u001b[0;36mSchedule.determine_pair_penalty\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mdetermine_pair_penalty\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[1;32m---> 12\u001b[0m      \u001b[38;5;28;01mfor\u001b[39;00m row \u001b[38;5;129;01min\u001b[39;00m \u001b[43mfilterRows\u001b[49m\u001b[38;5;241m.\u001b[39mindex:\n\u001b[0;32m     13\u001b[0m         \u001b[38;5;66;03m# print(f\"{type(row) = }\")\u001b[39;00m\n\u001b[0;32m     14\u001b[0m         \u001b[38;5;66;03m# print(f\"{row = }\")\u001b[39;00m\n\u001b[0;32m     15\u001b[0m         \u001b[38;5;66;03m# is row in the pair thing\u001b[39;00m\n\u001b[0;32m     16\u001b[0m         \u001b[38;5;66;03m# print(f\"{events['Pair_with'][row][0] = }\") # this object is the pair with game that should be paired\u001b[39;00m\n\u001b[0;32m     17\u001b[0m         \n\u001b[0;32m     18\u001b[0m         \u001b[38;5;66;03m# example syntax\u001b[39;00m\n\u001b[0;32m     19\u001b[0m         \u001b[38;5;66;03m# filtered_rows = df[df['Age'] > 30]\u001b[39;00m\n\u001b[0;32m     20\u001b[0m \n\u001b[0;32m     21\u001b[0m         \u001b[38;5;66;03m# print(f\"{events['Pair_with'][row] = }\")\u001b[39;00m\n\u001b[0;32m     22\u001b[0m         list_of_pairs_for_row \u001b[38;5;241m=\u001b[39m events[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mPair_with\u001b[39m\u001b[38;5;124m'\u001b[39m][row]\n\u001b[0;32m     24\u001b[0m         \u001b[38;5;66;03m# how to check if this event is scheduled at the same time?\u001b[39;00m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'filterRows' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "df['Assigned'] = CMSAU13T3DIV01         MO8:00\n",
+      "CMSAU13T3DIV02         MO8:00\n",
+      "CUSAO18DIV01           MO9:00\n",
+      "CMSAU17T1DIV01         MO8:00\n",
+      "CMSAU13T3DIV01PRC01    MO8:00\n",
+      "CMSAU13T3DIV02OPN02    MO8:00\n",
+      "CUSAO18DIV01PRC01      MO8:00\n",
+      "CMSAU17T1PRC01         MO8:00\n",
+      "Name: Assigned, dtype: object\n",
+      "slot = 'MO8:00'\n",
+      "slot = 'MO9:00'\n",
+      "slot = 'TU9:30'\n",
+      "games_to_check_for_row = ['CMSAU17T1DIV01']\n",
+      "game in index\n",
+      "(var != v2) = True\n",
+      "the penalty is: 10\n",
+      "current_penalty = 5.0\n",
+      "games_to_check_for_row = ['CUSAO18DIV01']\n",
+      "game in index\n",
+      "(var != v2) = True\n",
+      "the penalty is: 10\n",
+      "current_penalty = 10.0\n",
+      "slot_dict = {'MO8:00': 7, 'MO9:00': 1, 'TU9:30': 0}\n",
+      "df['Assigned'] = CMSAU13T3DIV01         MO8:00\n",
+      "CMSAU13T3DIV02         MO8:00\n",
+      "CUSAO18DIV01           MO9:00\n",
+      "CMSAU17T1DIV01         MO8:00\n",
+      "CMSAU13T3DIV01PRC01    MO8:00\n",
+      "CMSAU13T3DIV02OPN02    MO8:00\n",
+      "CUSAO18DIV01PRC01      MO8:00\n",
+      "CMSAU17T1PRC01         MO8:00\n",
+      "Name: Assigned, dtype: object\n",
+      "slot = 'MO8:00'\n",
+      "slot = 'MO9:00'\n",
+      "slot = 'TU9:30'\n",
+      "games_to_check_for_row = ['CMSAU17T1DIV01']\n",
+      "game in index\n",
+      "(var != v2) = True\n",
+      "the penalty is: 10\n",
+      "current_penalty = 5.0\n",
+      "games_to_check_for_row = ['CUSAO18DIV01']\n",
+      "game in index\n",
+      "(var != v2) = True\n",
+      "the penalty is: 10\n",
+      "current_penalty = 10.0\n",
+      "slot_dict = {'MO8:00': 7, 'MO9:00': 1, 'TU9:30': 0}\n"
      ]
     }
    ],
@@ -522,6 +568,7 @@
     "        return self.assignments\n",
     "        \n",
     "    def set_Eval(self):\n",
+    "        current_penalty = 0\n",
     "        total_df = events.copy()\n",
     "\n",
     "        total_df['Assigned'] = self.assignments['Slot']\n",
@@ -535,27 +582,29 @@
     "\n",
     "        print(f\"{df['Assigned'] = }\")\n",
     "\n",
+    "        slot_dict = dict()\n",
+    "\n",
+    "        for slot in env.game_slots.index:\n",
+    "\n",
+    "            print(f\"{slot = }\")\n",
+    "            slot_dict[slot] = 0\n",
+    "\n",
     "        for row in filterRows.index:\n",
-    "            # print(f\"{type(row) = }\")\n",
-    "            # print(f\"{row = }\")\n",
-    "            # is row in the pair thing\n",
-    "            # print(f\"{events['Pair_with'][row][0] = }\") # this object is the pair with game that should be paired\n",
     "            \n",
     "            # example syntax\n",
     "            # filtered_rows = df[df['Age'] > 30]\n",
     "\n",
-    "            # print(f\"{events['Pair_with'][row] = }\")\n",
-    "            list_of_pairs_for_row = events['Pair_with'][row]\n",
+    "            # each row should have a assigned slot\n",
     "\n",
-    "            # how to check if this event is scheduled at the same time?\n",
-    "            for paired_game in list_of_pairs_for_row:\n",
-    "                if(paired_game in filterRows['Assigned']):\n",
-    "                    print(f\"this is the paired game {paired_game}\")\n",
+    "            # print(f\"the row is...................{df['Assigned'][row] =}\")\n",
+    "\n",
+    "            slot_dict[df['Assigned'][row]] += 1\n",
+    "\n",
     "            if(debug_pair_with):\n",
     "\n",
     "                events_non_empty = events[events['Pair_with'].apply(lambda x: not isinstance(x, list) or len(x) > 0)]\n",
-    "                print(f\"{type(events_non_empty['Pair_with'])}\")\n",
-    "                print(f\"{events_non_empty['Pair_with'] = }\")\n",
+    "                # print(f\"{type(events_non_empty['Pair_with'])}\")\n",
+    "                # print(f\"{events_non_empty['Pair_with'] = }\")\n",
     "                pair_with_dict = events_non_empty['Pair_with'].to_dict()\n",
     "            # this is doing the work for the pair_with penalty    \n",
     "            if pair_with_dict.get(row) is not None:\n",
@@ -572,9 +621,25 @@
     "                        # print(f\"\\n\\n{var =}\\n\\n\")\n",
     "                        # print(f\"\\n\\n{v2 =}\\n\\n\")\n",
     "                        print(f\"{(var != v2) = }\")\n",
+    "                        if(var != v2):\n",
+    "                            cal = env.pen_notpaired * env.w_pair\n",
+    "                            print(f\"the penalty is: {cal}\")\n",
+    "                            current_penalty += cal / 2\n",
+    "                            print(f\"{current_penalty = }\")\n",
     "                    else:\n",
     "                        print(\"game not in index\")\n",
+    "        # end game pair stuff\n",
     "\n",
+    "        # now lets figure out the slots and how many can go in each spot\n",
+    "\n",
+    "        # each game has a slot assigned lets assume a complete schedule\n",
+    "        # we can make a dictionary of all the slots and then maybe fill in how many games that they have\n",
+    "        # then we can apply the penalty at the end if they don't have the minimun\n",
+    "        env.pen_gamemin\n",
+    "        env.w_minfilled\n",
+    "        penalty_game_filled = env.pen_gamemin * env.w_minfilled   # max(0, (game_min - games) todo fill in the min filled difference by taking the max(0, (game_min - games))\n",
+    "        \n",
+    "        print(f\"{slot_dict = }\")\n",
     "        \n",
     "        \n",
     "        \n",
@@ -589,9 +654,12 @@
     "\n",
     "sched = Schedule()\n",
     "# print(sched.get_Starting())\n",
-    "sched.assign([\"MO8:00\",\"MO8:00\",\"MO8:00\",\"MO8:00\",\"MO8:00\",\"MO8:00\",\"MO8:00\",\"MO8:00\"])\n",
+    "sched.assign([\"MO8:00\",\"MO8:00\",\"MO9:00\",\"MO8:00\",\"MO8:00\",\"MO8:00\",\"MO8:00\",\"MO8:00\"])\n",
     "sched.set_Eval()\n",
-    "# CMSAU17T1DIV01"
+    "# CMSAU17T1DIV01\n",
+    "\n",
+    "# penalty practice min\n",
+    "# penalty game min"
    ]
   },
   {
